# helix

./: .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .ignore  .rumdl.toml  .tsqueryrc.json  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  README  README.md  SECURITY.md  STEEL.md  TODO.md  VERSION  announce.md  astro.config.mjs  auto-pairs.toml  base16_terminal.toml  base16_theme.toml  build-helix-armv6l.sh  build-image.sh  build.sh  changes  clippy.toml  commands.html  config.toml  configuration.html  copilot.fish  custom.css  default.nix  ecosystem.html  (+66 more)
helix-config/: Cargo.toml
helix-config/src/: any.rs  convert.rs  core_impls.rs  definition.rs  env.rs  lib.rs  macros.rs  store.rs  tests.rs  toml.rs  validator.rs  value.rs
helix-core/: Cargo.toml  derp.txt
helix-core/proptest-regressions/: diff.txt
helix-core/src/: .match_brackets.rs.swp  abbreviations.rs  args.rs  auto_pairs.rs  buffer.rs  case_conversion.rs  change.rs  chars.rs  combinators.rs  command_line.rs  commands.rs  comment.rs  completion.rs  config.rs  conflict.rs  date.rs  diagnostic.rs  diff.rs  doc_cursor.rs  doc_formatter.rs  editor_config.rs  extensions.rs  file_watcher.rs  flock.rs  fuzzy.rs  graphemes.rs  history.rs  indent.rs  iterator.rs  language_mode.rs  lens.rs  lib.rs  line_ending.rs  macros.rs  mark.rs  match_brackets.rs  modeline.rs  movement.rs  normalized_url.rs  numbers.rs  (+30 more)
helix-core/test-indent/: commands.rs  indent.rs
helix-core/tests/: indent.rs  path.rs
helix-dap/: Cargo.toml
helix-dap-types/: Cargo.toml
helix-dap-types/src/: lib.rs
helix-dap/examples/: dap-basic.rs  dap-dlv.rs  dap-go.rs  dap-lldb.rs
helix-dap/src/: client.rs  config.rs  debuger_service.rs  lib.rs  registry.rs  test.rs  transport.rs  types.rs
helix-event/: Cargo.toml
helix-event/src/: cancel.rs  debounce.rs  hook.rs  lib.rs  redraw.rs  registry.rs  runtime.rs  status.rs  test.rs
helix-graphics/: Cargo.toml
helix-graphics/src/: lib.rs  theme.rs
helix-input/: Cargo.toml
helix-input/src/: clipboard.rs  lib.rs
helix-integrated-terminal/: Cargo.toml
helix-integrated-terminal/src/: error.rs  lib.rs  pty.rs  terminal.rs
helix-loader/: Cargo.toml  build.rs
helix-loader/src/: build_grammar.rs  config.rs  env_expander.rs  grammar.rs  lib.rs  main.rs  persistence.rs  repo_paths.rs  session.rs  trust.rs  trust_db.rs  ts_probe.rs  workspace_trust.rs
helix-lsp/: Cargo.toml  log
helix-lsp-types/: Cargo.toml  README.md
helix-lsp-types/src/: call_hierarchy.rs  code_action.rs  code_lens.rs  color.rs  completion.rs  document_diagnostic.rs  document_highlight.rs  document_link.rs  document_symbols.rs  error_codes.rs  file_operations.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  inline_completion.rs  inline_value.rs  lib.rs  linked_editing.rs  lsif.rs  moniker.rs  notification.rs  progress.rs  references.rs  rename.rs  request.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  trace.rs  type_hierarchy.rs  window.rs  workspace_diagnostic.rs  workspace_folders.rs  workspace_symbols.rs
helix-lsp/src/: client.rs  config.rs  copilot.rs  copilot_types.rs  file_event.rs  file_operations.rs  jsonrpc.rs  lib.rs  remap.rs  select_all.rs  snippet.rs  transport.rs
helix-lsp/tests/: copilot.rs
helix-parsec/: Cargo.toml
helix-parsec/src/: lib.rs
helix-plugin/: Cargo.toml  README.md
helix-plugin/src/: api.rs  config.rs  lib.rs  manager.rs  plugin.rs
helix-plugin/tests/: call_host.wat  discovery.rs  linking.rs  linking1.wat  linking2.wat  read_file.wasm  wasm_host.rs
helix-plugins/: Cargo.toml  build.rs
helix-plugins/src/: lib.rs
helix-stdx/: Cargo.toml
helix-stdx/src/: dbg.rs  env.rs  faccess.rs  hex.rs  hint.rs  lib.rs  nonempty.rs  path.rs  range.rs  rope.rs  str.rs  string.rs  time.rs  uri.rs
helix-stdx/tests/: path.rs  path_windows.rs
helix-syntax/: Cargo.toml  README.md  build.rs  languages.toml
helix-syntax/src/: config.rs  highlighter.rs  highlighter2.rs  injections_tree.rs  lib.rs  merge.rs  parse.rs  pretty_print.rs  query_iter.rs  ropey.rs  text_object.rs  tree_cursor.rs  tree_sitter.rs
helix-term/: .clippy.toml  .gitignore  Cargo.toml  README.md  build.rs  test.rs  test.txt  test2.txt
helix-term/examples/: translate.rs
helix-term/fuzz/: Cargo.toml
helix-term/i18n/: en.yml  zh-CN.yml  zh-TW.yml
helix-term/src/: .keymap.rs.un~  application.rs  args.rs  commands.rs  component.rs  compositor.rs  config.rs  editor.rs  editor_view.rs  events.rs  evil.rs  executor.rs  file_info.rs  file_manager.rs  grammars.rs  handlers.rs  health.rs  help.rs  i18n.rs  job.rs  keymap.rs  lib.rs  line.rs  log.rs  logging.rs  macros.rs  main.rs  make.rs  mousemap.rs  plugins.rs  prompt.rs  sandbox.rs  session.rs  shada.rs  shell_context.rs  terminal.rs  test.rs  theme.rs  zstd_dict
helix-term/tests/: integration-lsp.rs  integration.rs  lsp.rs
helix-terminal-view/: Cargo.toml
helix-terminal-view/src/: error.rs  pty.rs  terminal.rs
helix-tui/: .gitignore  Cargo.toml  README.md
helix-tui/benches/: tui.rs
helix-tui/src/: backend.rs  buffer.rs  extension.rs  layout.rs  lib.rs  style.rs  symbols.rs  terminal.rs  text.rs  widgets.rs
helix-tui/tests/: terminal.rs  text.rs  widgets_block.rs  widgets_list.rs  widgets_paragraph.rs  widgets_table.rs
helix-ui/: Cargo.toml
helix-ui/src/: femto.rs  main.rs  shader.wgsl
helix-vcs/: Cargo.toml
helix-vcs/src/: blame.rs  branch.rs  config.rs  diff.rs  file.rs  git.rs  hg.rs  jj.rs  jujutsu.rs  lib.rs  repository.rs  rope.rs  status.rs
helix-view/: Cargo.toml  build.rs
helix-view/benches/: word_index.rs
helix-view/src/: action.rs  annotations.rs  args.rs  base64.rs  clipboard.rs  command_line.rs  commands.rs  completers.rs  completion.rs  (+51 more)
helix-vte/: Cargo.toml
helix-web/: .gitignore  Cargo.toml  README.md  build.rs  languages  languages.orig  package-lock.json  package.json
silicon-lua/: Cargo.toml
silicon-term/: Cargo.toml  build.rs
silicon-terminal/: Cargo.toml
silicon-view/: Cargo.toml
xtask/: Cargo.toml  build.rs
(+3369 files in other folders)
