[workspace]
resolver = "2"
members = [
  "silicon-core",
  "silicon-view",
  "silicon-term",
  "silicon-terminal",
  "silicon-lua",
  "silicon-tui",
  "silicon-lsp-types",
  "silicon-lsp",
  "silicon-event",
  "silicon-dap-types",
  "silicon-dap",
  "silicon-loader",
  "silicon-vcs",
  "silicon-parsec",
  "silicon-stdx",
  "xtask",
]

default-members = [
  "silicon-term"
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.opt]
inherits = "release"

[profile.integration]
inherits = "test"
package.silicon-core.opt-level = 2
package.silicon-tui.opt-level = 2
package.silicon-term.opt-level = 2

[workspace.dependencies]
tree-house = { version = "0.3.0", default-features = false }
nucleo = "0.5.0"
slotmap = "1.1.1"
thiserror = "2.0"
tempfile = "3.25.0"
bitflags = "2.10"
unicode-segmentation = "1.2"
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
foldhash = "0.2"
parking_lot = "0.12"
futures-executor = "0.3"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
tokio-stream = "0.1.18"
toml = "0.9"
termina = "0.1"
sonic-rs = "0.5"
globset = "0.4"
etcetera = "0.11"
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "error-send", "macros"] }
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.7"

[workspace.package]
version = "26.2.0"
edition = "2021"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
categories = ["editor"]
repository = "https://github.com/helix-editor/silicon"
homepage = "https://helix-editor.com"
license = "MPL-2.0"
rust-version = "1.87"
