[package]
name = "helix-config"
description = "Configuration system for Helix editor"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
ahash = "0.8.6"
hashbrown = { version = "0.14.3", features = ["raw"] }
parking_lot = "0.12"
anyhow = "1.0.79"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4.14"
regex = "1.10.2"
regex-syntax = "0.8.2"
which = "5.0.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
