[package]
name = "helix-core"
description = "Helix editor core editing primitives"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
unicode-lines = ["ropey/unicode_lines"]
integration = []
steel = ["dep:steel-core"]

[dependencies]
helix-stdx = { path = "../helix-stdx" }
helix-loader = { path = "../helix-loader" }
helix-parsec = { path = "../helix-parsec" }

ropey.workspace = true
smallvec = "1.15"
smartstring = "1.0.1"
unicode-segmentation.workspace = true
# unicode-width is changing width definitions
# that both break our logic and disagree with common
# width definitions in terminals, we need to replace it.
# For now lets lock the version to avoid rendering glitches
# when installing without `--locked`
unicode-width = "=0.1.12"
unicode-general-category = "1.0"
slotmap.workspace = true
tree-house.workspace = true
once_cell = "1.21"
arc-swap = "1"
regex = "1"
bitflags.workspace = true
foldhash.workspace = true
url = "2.5.4"

log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

imara-diff =  "0.2.0"
encoding_rs = "0.8"

chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }

textwrap = "0.16.2"

steel-core = { workspace = true, optional = true }
nucleo.workspace = true
parking_lot.workspace = true
globset = "0.4.16"
regex-cursor = "0.1.5"

[dev-dependencies]
quickcheck = { version = "1", default-features = false }
indoc = "2.0.6"
