[package]
name = "helix-core"
description = "Helix editor core editing primitives"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
unicode-lines = ["ropey/unicode_lines"]

[dependencies]
helix-stdx = { workspace = true } #unified
helix-loader = { workspace = true } #unified
helix-parsec = { workspace = true } #unified

ropey.workspace = true
smallvec = { workspace = true } #unified
smartstring = "1.0.1"
unicode-segmentation.workspace = true
# unicode-width is changing width definitions
# that both break our logic and disagree with common
# width definitions in terminals, we need to replace it.
# For now lets lock the version to avoid rendering glitches
# when installing without `--locked`
unicode-width = "=0.1.12"
unicode-general-category = "1.1"
slotmap.workspace = true
tree-house.workspace = true
once_cell = { workspace = true } #unified
arc-swap = "1"
regex = "1"
bitflags.workspace = true
foldhash.workspace = true
url = { workspace = true, features = ["serde"] } #unified
log = { workspace = true } #unified
anyhow = { workspace = true } #unified
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
toml.workspace = true

imara-diff =  "0.2.0"
encoding_rs = "0.8"
chrono = { workspace = true, features = ["clock"] } #unified

textwrap = "0.16.2"

nucleo.workspace = true
parking_lot.workspace = true
globset.workspace = true
regex-cursor = "0.1.5"

[dev-dependencies]
quickcheck = { version = "1", default-features = false }
indoc = { workspace = true } #unified
