[package]
name = "helix-dap-types"
description = "Types for interaction with a debug adapaters, using Debug Adapter Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
