[package]
name = "helix-event"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foldhash.workspace = true
hashbrown = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "parking_lot", "macros"] }
# the event registry is essentially read only but must be an rwlock so we can
# setup new events on intalization, hardware-lock-elision hugnly benefits this case
# as is essentially makes the lock entirely free as long as there is no writes
once_cell = "1.21"
parking_lot = { workspace = true, features = ["hardware-lock-elision"] }

anyhow = "1"
log = "0.4"
futures-executor = "0.3.31"

[features]
integration_test = []
