[package]
name = "helix-event"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foldhash.workspace = true
hashbrown = "0.16"
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "net", "process", "sync"] } #unified
# the event registry is essentially read only but must be an rwlock so we can
# setup new events on initialization, hardware-lock-elision hugely benefits this case
# as it essentially makes the lock entirely free as long as there is no writes 
parking_lot = { workspace = true, features = ["hardware-lock-elision"] }
once_cell = { workspace = true } #unified
anyhow = { workspace = true } #unified
log = { workspace = true } #unified
futures-executor = "0.3.31"

[features]
integration_test = []
