[package]
name = "helix-loader"
description = "Build bootstrapping for Helix crates"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "hx-loader"
path = "src/main.rs"

[dependencies]
helix-stdx = { workspace = true } #unified
anyhow = { workspace = true } #unified
serde = { workspace = true } #unified
toml.workspace = true
etcetera.workspace = true
once_cell = { workspace = true } #unified
log = { workspace = true } #unified

# TODO: these two should be on !wasm32 only

# cloning/compiling tree-sitter grammars
cc = { version = "1" }
threadpool = { version = "1.0" }
tempfile.workspace = true

tree-house.workspace = true
