[package]
name = "lsp-types"
version = "0.95.1"
authors = ["Markus Westerlind <marwes91@gmail.com>", "Bruno Medeiros <bruno.do.medeiros@gmail.com>"]
edition = "2018"
description = "Types for interaction with a language server, using VSCode's Language Server Protocol"

repository = "https://github.com/gluon-lang/lsp-types"
documentation = "https://docs.rs/lsp-types"

readme = "README.md"

keywords = ["language", "server", "lsp", "vscode", "lsif"]

license = "MIT"

[dependencies]
bitflags = "1.0.1"
serde = { version = "1.0.34", features = ["derive"] }
serde_json = "1.0.50"
serde_repr = "0.1"
url = {version = "2.0.0", features = ["serde"]}

[features]
default = []
# Enables proposed LSP extensions.
# NOTE: No semver compatibility is guaranteed for types enabled by this feature.
proposed = []
