[package]
name = "helix-lsp-types"
version = "0.95.1"
authors = [
  # Original authors
  "Markus Westerlind <marwes91@gmail.com>",
  "Bruno Medeiros <bruno.do.medeiros@gmail.com>",
  # Since forking
  "Helix contributors"
]
edition = "2018"
description = "Types for interaction with a language server, using VSCode's Language Server Protocol"

repository = "https://github.com/gluon-lang/lsp-types"
documentation = "https://docs.rs/lsp-types"

readme = "README.md"

keywords = ["language", "server", "lsp", "vscode", "lsif"]

license = "MIT"

[dependencies]
bitflags = "2.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_repr = "0.1"
url = {version = "2.5.4", features = ["serde"]}

[features]
default = []
# Enables proposed LSP extensions.
# NOTE: No semver compatibility is guaranteed for types enabled by this feature.
proposed = []
