[package]
name = "helix-lsp"
description = "LSP client implementation for Helix project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helix-stdx = { workspace = true } #unified
helix-core = { workspace = true } #unified
helix-loader = { workspace = true } #unified
helix-lsp-types = { workspace = true } #unified
anyhow = { workspace = true } #unified
futures-executor.workspace = true
futures-util.workspace = true
globset.workspace = true
log = { workspace = true } #unified
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "net", "process", "sync"] } #unified
tokio-stream.workspace = true
parking_lot.workspace = true
arc-swap = "1"
slotmap.workspace = true
thiserror.workspace = true
sonic-rs.workspace = true
