[package]
name = "helix-stdx"
description = "Standard library extensions"
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
dunce = "1.0"
etcetera = "0.10"
ropey.workspace = true
which = "8.0"
regex-cursor = "0.1.5"
bitflags.workspace = true
once_cell = "1.21"
regex-automata = "0.4.9"
unicode-segmentation.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.0", features = ["fs"] }

[dev-dependencies]
tempfile.workspace = true
