[package]
name = "helix-syntax"
version = "0.3.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2018"
license = "MPL-2.0"
description = "Tree-sitter grammars support"
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
include = ["src/**/*", "languages/**/*", "build.rs", "!**/docs/**/*", "!**/test/**/*", "!**/examples/**/*", "!**/build/**/*"]

[dependencies]
tree-sitter = "0.19"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cc = { version = "1",  features = ["parallel"] }
threadpool = { version = "1.0" }
