[package]
name = "helix-syntax"
version = "0.5.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2021"
license = "MPL-2.0"
description = "Tree-sitter grammars support"
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
include = ["src/**/*", "languages/**/*", "build.rs", "!**/docs/**/*", "!**/test/**/*", "!**/examples/**/*", "!**/build/**/*"]

[dependencies]
tree-sitter = "0.20"
libloading = "0.7"
anyhow = "1"

[build-dependencies]
cc = { version = "1" }
threadpool = { version = "1.0" }
anyhow = "1"
