[package]
name = "helix-syntax"
description = "Helix syntax highlighting "
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]

[dependencies]
helix-stdx = { path = "../helix-stdx" }

ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
slotmap = "1.0"
tree-sitter.workspace = true
once_cell = "1.19"
arc-swap = "1"
regex = "1"
bitflags = "2.4"
ahash = "0.8.9"
hashbrown = { version = "0.14.3", features = ["raw"] }
log = "0.4"
